Added End Point to add and edit Subjects and some other minor changes